--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,14 @@
 plugins {
     id 'java'
+    id 'io.qameta.allure' version '2.8.1'
+}
+
+allure {
+    autoconfigure = true
+    version = '2.13.0' // Latest Allure Version
+    useJUnit5 {
+        version = '2.13.0' // Latest Allure Version
+    }
 }
 
 group 'ru.netology'
@@ -11,6 +20,7 @@ compileJava.options.encoding = "UTF-8"
 compileTestJava.options.encoding = "UTF-8"
 
 repositories {
+    jcenter()
     mavenCentral()
 }
 
